Boton mail soporte

--- a/paginas/calculo.html
+++ b/paginas/calculo.html
@@ -5,12 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="keywords" content="Banco, Plazo, Fijo, Calculos, Calcular">
     <meta name="description" content="Plataforma de Calculo para Plazos Fijos">
-    <title>Calculo de Plazo FIjo</title>
     <link rel="icon" href="../imagenes/favicon.ico">
     <link rel="apple-touch-icon" sizes="180x180" href="../imagenes/android-chrome-192x192.png">
     <link rel="icon" type="image/png" sizes="32x32" href="../imagenes/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="../imagenes/favicon-16x16.png">
     <link rel="manifest" href="/site.webmanifest">
+    <title>Ingreso al Home Banking</title>
   </head>
   <body style="margin: 10rem; padding-left: 22rem; background-color:rgb(78, 14, 14);">
     <fieldset style="border-color: whitesmoke; display: inline-block;">
@@ -81,6 +81,7 @@
         sans-serif;
         font-weight: bold;
         font-size: 15px; color: white; padding: center;"><span>
+    <script src="sweetalert2.all.min.js"></script>
     <script src="../js/index.js"></script>
   </body>
 </html>
