Aplico Libreria sweet en Ingreso

--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
         style="color: skyblue; background-color: rgb(78, 14, 14); border-color:skyblue;"
         onclick="ingresar()"/>
     </fieldset>
+    <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <script src="./js/ingreso.js"></script>
   </body>
 </html>
