--- a/paginas/calculo.html
+++ b/paginas/calculo.html
@@ -81,7 +81,7 @@
         sans-serif;
         font-weight: bold;
         font-size: 15px; color: white; padding: center;"><span>
-    <script src="sweetalert2.all.min.js"></script>
+    <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <script src="../js/index.js"></script>
   </body>
 </html>
