detalles del ingreso

--- a/paginas/calculo.html
+++ b/paginas/calculo.html
@@ -35,6 +35,12 @@
         font-family: Verdana, Geneva, Tahoma, sans-serif;"
       >INGRESE EL PLAZO DE LA OPERACIÓN</label>
       <br/>
+      <label for="idMail" style="
+      color:skyblue;
+      font-weight: normal;
+      font-family: Verdana, Geneva, Tahoma, sans-serif;"
+      >INGRESE MAIL DE CONTACTO</label>
+      <br/>
       <input type="button" value="CALCULAR" id="idBotonCalcular"
       style="color: whitesmoke; background-color: black; border-color: whitesmoke; margin: 5px;"/>
       <input type="radio" name="radio" id="radio1" checked>
