--- a/paginas/calculo.html
+++ b/paginas/calculo.html
@@ -13,6 +13,7 @@
     <title>Ingreso al Home Banking</title>
   </head>
   <body style="margin: 10rem; padding-left: 22rem; background-color:rgb(78, 14, 14);">
+    <h3 id="frases"></h3>
     <fieldset style="border-color: whitesmoke; display: inline-block;">
       <input type="text" id="idNombre"/>
       <label for="idNombre" style="
