--- a/paginas/calculo.html
+++ b/paginas/calculo.html
@@ -12,7 +12,7 @@
     <link rel="manifest" href="/site.webmanifest">
     <title>Ingreso al Home Banking</title>
   </head>
-  <body style="margin: 10rem; padding-left: 22rem; background-color:rgb(78, 14, 14);">
+  <body style="margin: 5rem; padding-left: 22rem; background-color:rgb(78, 14, 14);">
     <fieldset style="border-color: whitesmoke; display: inline-block;">
       <input type="text" id="idNombre"/>
       <label for="idNombre" style="
@@ -81,7 +81,11 @@
         sans-serif;
         font-weight: bold;
         font-size: 15px; color: white; padding: center;"><span>
-      <div id="frases"></div>
+      <div id="frases" style="font-family: Verdana, Geneva, Tahoma, sans-serif,
+      sans-serif; 
+      font-size: 10px;
+      padding: 0.2rem;
+      "></div>
     <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <script src="../js/index.js"></script>
   </body>
